volga-macros/tests/ui/claims_invalid.stderr
error[E0277]: the trait bound `BadClaims: Clone` is not satisfied
 --> tests/ui/claims_invalid.rs:6:8
  |
6 | struct BadClaims {
  |        ^^^^^^^^^ the trait `Clone` is not implemented for `BadClaims`
  |
note: required by a bound in `AuthClaims`
 --> $WORKSPACE/volga/src/auth/claims.rs
  |
  | pub trait AuthClaims: DeserializeOwned + Clone {
  |                                          ^^^^^ required by this bound in `AuthClaims`
help: consider annotating `BadClaims` with `#[derive(Clone)]`
  |
6 + #[derive(Clone)]
7 | struct BadClaims {
  |

error[E0277]: the trait bound `BadClaims: serde::Deserialize<'de>` is not satisfied
 --> tests/ui/claims_invalid.rs:6:8
  |
6 | struct BadClaims {
  |        ^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `for<'de> serde_core::de::Deserialize<'de>` is not implemented for `BadClaims`
 --> tests/ui/claims_invalid.rs:6:1
  |
6 | struct BadClaims {
  | ^^^^^^^^^^^^^^^^
  = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `BadClaims` type
  = note: for types from other crates check whether the crate offers a `serde` feature flag
  = help: the following other types implement trait `serde_core::de::Deserialize<'de>`:
            &'a [u8]
            &'a std::path::Path
            &'a str
            ()
            (T,)
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
          and $N others
  = note: required for `BadClaims` to implement `serde_core::de::DeserializeOwned`
note: required by a bound in `AuthClaims`
 --> $WORKSPACE/volga/src/auth/claims.rs
  |
  | pub trait AuthClaims: DeserializeOwned + Clone {
  |                       ^^^^^^^^^^^^^^^^ required by this bound in `AuthClaims`
  = note: `AuthClaims` is a "sealed trait", because to implement it you also need to implement `serde_core::de::DeserializeOwned`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
  = help: the following type implements the trait:
            T
